# django-rag-analytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local_test.py  pyproject.toml  start_docker.sh  start_local.sh
.github/workflows/: django.yml
rag_project/: db.sqlite3
rag_project/documents/: admin.py  forms.py  models.py  urls.py  views.py
rag_project/documents/management/commands/: test_mongodb.py
rag_project/documents/migrations/: 0001_initial.py  0002_document_title_alter_document_file.py  0003_document_uploaded_by.py  0004_document_id_hash.py  0005_remove_document_id_hash.py  0006_document_raw_bytes.py  0007_document_size.py  0008_documentimages.py  0009_alter_documentimages_unique_together_and_more.py  0010_documentimage_delete_documentimages.py  0011_entity.py  0012_documentanalytics.py  0013_document_original_title.py  0014_alter_documentimage_image.py
rag_project/documents/tests/: test_views.py
rag_project/documents/utils/: RAG.py  document_conversion.py  logger.py  mongodb_config.py  rag_prompt.yaml  text_embedding.py  text_extraction.py  text_summarization.py  toc_calidation.yaml  utility_functions.py  vector_db.py
rag_project/rag_project/: settings.py  urls.py
rag_project/templates/documents/: analytics.html  chat.html  chunk_success.html  convert.html  document.html  home.html  summarize_success.html  upload.html  upload_error.html
