[tool.poetry]
name = "django-rag-analytics"
version = "0.1.0"
description = ""
authors = ["Iorio Luca <iorioluca97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.2"
langchain = "^0.3.25"
pymupdf = "^1.26.0"
openai = "^1.84.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
