[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = ""
authors = ["Iorio Luca <iorioluca97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "^5.2.2"
langchain = "^0.3.25"
pymupdf = "^1.26.0"
openai = "^1.84.0"
dotenv = "^0.9.9"
langchain-core = "^0.3.64"
pypdf2 = "^3.0.1"
langchain-openai = "^0.3.21"
coloredlogs = "^15.0.1"
pymongo = "^4.13.0"
numpy = "^2.3.0"
pillow = "^11.2.1"
nltk = "^3.9.1"
pdfplumber = "^0.11.6"
langdetect = "^1.0.9"
python-dotenv = "^1.1.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
